# server/modules/api/user.go
@@ -2,9 +2,9 @@ package api
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/gin-gonic/gin/binding"
-	"server/lib/valid"
+	"server/middleware"
 	"server/modules/service"
+	"server/utils"
 	"server/utils/resp"
 )
 
@@ -16,31 +16,21 @@ func NewUserController(e *gin.Engine) {
 	c := &UserController{
 		service: service.NewUserService(),
 	}
-	admin := e.Group("/api/admin/user")
-	admin.GET("/list", c.FindList)
+	admin := e.Group("/api/user")
+	admin.GET("/current", middleware.Auth(), c.CurrentInfo)
 }
 
-// FindList
+// CurrentInfo
 //
-//	@Summary	用户列表
-//	@Tags		管理后台-用户
+//	@Summary	当前登陆者信息
+//	@Tags		前台-用户
 //	@Accept		json
 //	@Produce	json
-//	@Success	200	{object}	string	"resp"
-//	@Router		/api/admin/user/list [get]
-func (c *UserController) FindList(ctx *gin.Context) {
-	list, _ := c.service.FindList()
-	ctx.JSON(resp.Succ(list))
-}
-
-// Create 创建用户
-func (c *UserController) Create(ctx *gin.Context) {
-	var body CreateUserBodyDto
-	if err := ctx.ShouldBindBodyWith(&body, binding.JSON); err != nil {
-		ctx.JSON(resp.ParamErr(valid.ErrTransform(err)))
-		return
-	}
-	ctx.JSON(resp.Succ(nil))
+//	@Success	200	{object}	resp.Result{data=model.User}	"用户详情"
+//	@Router		/api/user/current [get]
+func (c *UserController) CurrentInfo(ctx *gin.Context) {
+	user := utils.GetCurrentUser(ctx)
+	ctx.JSON(resp.Succ(user))
 }
 
 type CreateUserBodyDto struct {
